fixed a little problem with the header who were too large

--- a/header.css
+++ b/header.css
@@ -6,7 +6,6 @@ nav {
     justify-content: space-between;
     padding: 0;
     position: static;
-    width: 100vw;
 }
 
 nav h1 {
